--- a/auth-server/README.adoc
+++ b/auth-server/README.adoc
@@ -1,9 +1,10 @@
 How to run:
 
-1. Run the application by mvn spring-boot:run
-2. Navigate to http://localhost:8080
-3. Click on the login with facebook link and log in the application.
-4. After logging in, a button "Test" will be available, click this button to retrieve public profile information for facebook via the facebook access token that was stored when you logged in the application.
+1. Make sure you have MySQL installed and running on your system 
+2. Run the application by mvn spring-boot:run
+3. Navigate to http://localhost:8080
+4. Click on the login with facebook link and log in the application.
+5. After logging in, a button "Test" will be available, click this button to retrieve public profile information for facebook via the facebook access token that was stored when you logged in the application.
 
 Note: Please wait while the JSON data is returned and displayed on the page, no "loading" feedback is implemented at the moment.
 
